subfolder issue cleanup

--- a/themes/hugo-freelancer-theme/layouts/partials/about.html
+++ b/themes/hugo-freelancer-theme/layouts/partials/about.html
@@ -12,7 +12,7 @@
         <div class="col-lg-12 about">
             <h3>Education</h3>
             <p>Bachelor of Science <strong>University of California San Diego</strong><br>
-            Bioinformatics with spec in Computer Science</p> test
+            Bioinformatics with spec in Computer Science</p>
 
             <br>
             <h3>Publications</h3>
