--- a/themes/hugo-freelancer-theme/layouts/partials/head.html
+++ b/themes/hugo-freelancer-theme/layouts/partials/head.html
@@ -5,6 +5,7 @@
 <meta name="author" content="{{ with .Site.Params.name }}{{ . }}{{ end }}">
 {{ .Hugo.Generator }}
 <title>{{ .Site.Title }}</title>
+<link rel="shortcut icon" type="image/png" href="/favicon.png"/>
 {{ "<!-- Bootstrap Core CSS - Uses Bootswatch Flatly Theme: http://bootswatch.com/flatly/ -->" | safeHTML }}
 <link href="{{ .Site.BaseURL }}css/bootstrap.min.css" rel="stylesheet">
 {{ "<!-- Custom CSS -->" | safeHTML }}
